--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,7 @@
     <string name="flight_number">Flight Number:</string>
     <string name="destination">Destination:</string>
 
-    <string name="departure">Departure:</string>
+    <string name="departure">Departure Time:</string>
     <string name="today">Today</string>
     <string name="tomorrow">Tomorrow</string>
 
